# BitPill

./: .actionlint.yaml  .gitignore  .lefthook.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  actionlint.yaml  cliff.toml  dose_records.json  justfile  medications.json
.forgejo/workflows/: check-branch.yml  ci.yml  cleanup-github-branch.yml  commit-check.yml  lint.yml  release-preflight.yml  release.yml  run-tests.yml  sync-to-github.yml
.github/: actionlint.yaml  copilot-instructions.md
.github/instructions/: application.instructions.md  copilot-cli.instructions.md  domain.instructions.md  infrastructure.instructions.md  rust.instructions.md  tests.instructions.md
.github/workflows/: changelog.yml  ci.yml  commit-check.yml  pr-automation.yml  release.yml
docs/: LAYER_MODIFICATION_GUIDE.md  MAINTENANCE.md  ddd-in-rust.md  overview.md  presentation-components.md  solid-principles.md  tui-presentation.md
docs/domain/: errors.md
docs/infrastructure/: clock.md  container.md  notifications.md
scripts/: check_branch_name.sh  check_commit_messages.sh  check_coverage.sh  ensure_full_history.sh  release.sh  setup.sh  show_coverage_report.sh  test-one.sh  test_path.sh
scripts/lib/: bump.sh  changelog.sh  commit.sh  common.sh  context.sh  git.sh  pr.sh  release.sh  release_flow.sh  version.sh
src/: lib.rs  main.rs  runner.rs
src/application/: errors.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/infrastructure/: container.rs  container_settings_tests.rs  mod.rs
src/presentation/: mod.rs  root.rs
tests/: console_notification_adapter.rs  container.rs  create_medication_handler_enter.rs  edit_medication_handler_enter.rs  infrastructure.rs  infrastructure_clock.rs  integration_mark_taken.rs  integration_mark_taken_handler.rs  integration_mark_taken_handler_file.rs  presentation.rs  presentation_e2e.rs  presentation_modal_e2e.rs  services.rs
tests/application/: main.rs
tests/common/: fixtures.rs
tests/fakes/: fake_clock.rs  fake_dose_record_repository.rs  fake_medication_repository.rs  fake_notification_port.rs  fake_settings_repository.rs  mod.rs
tests/infrastructure/: app_initializer_tests.rs  container_settings_tests.rs  integration_mark_taken.rs  integration_mark_taken_handler.rs  integration_mark_taken_handler_file.rs  (+5 more)
(+345 files in other folders)
