[package]
name = "bitpill"
version = "0.1.0"
edition = "2024"

[features]
test-helpers = []

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v7", "std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
