[package]
name = "bitpill"
version = "0.3.2"
edition = "2024"
description = "A personal medication management TUI application built in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/gbrennon/BitPill"
homepage = "https://github.com/gbrennon/BitPill"
keywords = ["medication", "health", "tui", "ratatui", "cli"]
categories = ["command-line-utilities", "health", "terminals"]

[features]
default = ["test-helpers"]
test-helpers = []

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v7", "std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
