[package]
name = "bitpill"
version = "0.3.4"
edition = "2024"
description = "A personal medication management TUI application built in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/gbrennon/BitPill"
homepage = "https://github.com/gbrennon/BitPill"
keywords = ["medication", "health", "tui", "ratatui", "cli"]
categories = ["accessibility", "command-line-utilities", "filesystem"]

[features]
default = ["test-helpers"]
test-helpers = []
rest-api = ["dep:actix-web", "dep:tokio"]

[dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v7", "std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
actix-web = { version = "4", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
